Add learn command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "gary.js",
   "dependencies": {
-    "botkit": "^0.2.2"
+    "botkit": "^0.5.4",
+    "botkit-storage-mongo": "^1.0.6",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {},
   "scripts": {
