--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "garybot",
+  "name": "botkit-gary",
   "version": "1.0.0",
   "description": "",
-  "main": "gary.js",
-  "dependencies": {
-    "botkit": "^0.5.4",
-    "botkit-storage-mongo": "^1.0.6",
-    "lodash": "^4.17.4"
-  },
-  "devDependencies": {},
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "botbuilder-adapter-slack": "^1.0.2",
+    "botbuilder-storage-mongodb": "^0.9.5",
+    "botkit": "^4.0.1",
+    "botkit-plugin-cms": "^1.0.0",
+    "dotenv": "^7.0.0"
+  }
 }
