--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/gary-image', '.' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/gary', '.' ]
 images:
-- 'gcr.io/$PROJECT_ID/gary-image'
+- 'gcr.io/$PROJECT_ID/gary'
