--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "botkit": "^4.0.1",
     "botkit-plugin-cms": "^1.0.0",
     "dotenv": "^7.0.0",
+    "mongodb": "^3.3.0-beta2",
     "pokedex-promise-v2": "^3.2.0"
   }
 }
