--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "botkit-mock": "^0.1.11",
     "botkit-plugin-cms": "^1.0.0",
     "dotenv": "^7.0.0",
+    "jsdom": "^15.1.1",
     "mongodb": "^3.3.0-beta2",
     "pokedex-promise-v2": "^3.2.0"
   },
